# marine-accident-risk-analysis

./: .env.example  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
configs/: default.yaml
docs/diagrams/: architecture.html
reports/clean/: coordinate_cleaning.json  coordinate_cleaning.md
reports/model/: metrics.md
reports/stats/: accident_types.json  accident_types.md  case_crossover.json  case_crossover.md
reports/weather/: station_coverage.json  station_coverage.md
reports/xai/: odds_ratios.md
scripts/: build_dataset.py  capture_demo.py  clean_accidents.py  collect_weather.py  collect_weather_bulk.py  run_model.py  run_stats.py  run_xai.py  station_coverage.py
src/marine_accident_risk/: config.py
src/marine_accident_risk/data/: clean.py  mtis.py  nmpnt.py
src/marine_accident_risk/grid/: __init__.py  grid.py  sampling.py
src/marine_accident_risk/matching/: __init__.py  matching.py
src/marine_accident_risk/modeling/: __init__.py  evaluate.py  features.py  models.py
src/marine_accident_risk/serving/: service.py
src/marine_accident_risk/stats/: conditional.py  significance.py
tests/: conftest.py  test_clean.py  test_conditional.py  test_evaluate.py  test_features.py  test_grid.py  test_matching.py  test_mtis.py  test_nmpnt.py  test_sampling.py
tests/fixtures/: nmpnt_stations_response.json  nmpnt_weather_response.json
web/: .gitignore  package-lock.json  package.json
web/app/: globals.css  layout.tsx
web/app/components/: Chrome.tsx  Panels.tsx  StatsExplorer.tsx
web/app/lib/: format.ts
